--- a/.github/workflows/AWS.yml
+++ b/.github/workflows/AWS.yml
@@ -1,4 +1,4 @@
-name: RDP1
+name: RDP2
 
 on: workflow_dispatch
 
@@ -17,9 +17,9 @@ jobs:
     - name: Connect your NGROK account
       run: .\ngrok.exe authtoken $Env:NGROK_AUTH_TOKEN
       env:
-        NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
+        NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN2 }}
     - name: Make YML file for NGROK.
-      run: start NGROK-AP.bat
+      run: start NGROK-US.bat
     - name: Enable RDP Access.
       run: | 
         Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server'-name "fDenyTSConnections" -Value 0
